# SigilVG

./: CMakeLists.txt  README.md  TECHNICAL.md  sigilvg.h
examples/: headless.c  headless_batch.c  shell.html  viewer.c  web_demo.c
shaders/: sigil_bake_gradient.wgsl  sigil_fragment.wgsl  sigil_prepare_compute.wgsl  sigil_vertex.wgsl
tests/: batch_pixel_test.c  run_pixel_compare.sh  run_resvg_suite.sh  test_parse.c  test_reference.c  test_reference.cpp  test_resvg_suite.c
